--- a/service.html
+++ b/service.html
@@ -32,19 +32,46 @@
   </li>
 
   <li style="margin-bottom: 1ex;">
-  Organizer of Secure Compilation Meetings (SCM) at Inria Paris
-  (13 invited participants, 17--19 August 2016) and POPL (15 January 2017)
+  Main organizer of \href{http://www.dagstuhl.de/18201}
+                         {Dagstuhl Seminar 18201 on Secure Compilation}
+  (May 13-18, 2018)
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+  Artifact Evaluation Co-Chair for 
+  Principles of Programming Languages (<a href="https://popl18.sigplan.org/">POPL 2018</a>
+                                   and <a href="https://popl19.sigplan.org/">POPL 2019</a>)
+
+  <li style="margin-bottom: 1ex;">
+  Main organizer of the <a href="http://popl18.sigplan.org/track/prisc-2018">
+                                 Workshop on Principles of Secure Compilation (PriSC)</a>
+  at POPL (# of registered participants: 31 in 2017 and 40 in 2018)
+
+  <li style="margin-bottom: 1ex;">
+  Co-Organizer of <a href="http://www.ccs.neu.edu/home/weiss/esop18/pc.html">
+                           ESOP Program Committee Workshop</a> at Inria Paris
+  (December 2017, approx 40 participants)
+  <li>
+
+  <li style="margin-bottom: 1ex;">
+  Organizer of Everest workshop at Inria Paris
+  (October 2017, approx 40 participants)
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+  Organizer of Secure Compilation meeting at Inria Paris
+  (August 2016, 13 participants)
   </li>
 
   <li style="margin-bottom: 1ex;">
   Main organizer of <a href="https://wiki.inria.fr/prosecco/The_Joint_EasyCrypt-F*-CryptoVerif_School_2014">Joint EasyCrypt-F*-CryptoVerif School 2014 in Paris</a> (over 80 participants)
   </li>
 
-  <li style="margin-bottom: 1ex;">
-  Organizer of the TOS reading group at UPenn
-  on the interplay between security, programming languages,
-  verification, operating systems, and hardware architecture (2012 -- 2013)
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"> -->
+  <!-- Organizer of the TOS reading group at UPenn -->
+  <!-- on the interplay between security, programming languages, -->
+  <!-- verification, operating systems, and hardware architecture (2012 -- 2013) -->
+  <!-- </li> -->
 
 </ul>
 
