--- a/service.html
+++ b/service.html
@@ -32,8 +32,8 @@
   </li>
 
   <li style="margin-bottom: 1ex;">
-  Main organizer of \href{http://www.dagstuhl.de/18201}
-                         {Dagstuhl Seminar 18201 on Secure Compilation}
+  Main organizer of <a href="http://www.dagstuhl.de/18201">
+                         Dagstuhl Seminar 18201 on Secure Compilation</a>
   (May 13-18, 2018)
   </li>
 
