--- a/service.html
+++ b/service.html
@@ -40,7 +40,7 @@
   <li style="margin-bottom: 1ex;">
   Artifact Evaluation Co-Chair for 
   Principles of Programming Languages (<a href="https://popl18.sigplan.org/">POPL 2018</a>
-                                   and <a href="https://popl19.sigplan.org/">POPL 2019</a>)
+                                   and <a href="https://popl19.sigplan.org/">2019</a>)
 
   <li style="margin-bottom: 1ex;">
   Main organizer of the <a href="http://popl18.sigplan.org/track/prisc-2018">
