--- a/service.html
+++ b/service.html
@@ -45,7 +45,7 @@
   <li style="margin-bottom: 1ex;">
   Main organizer of the <a href="http://popl18.sigplan.org/track/prisc-2018">
                                  Workshop on Principles of Secure Compilation (PriSC)</a>
-  at POPL (# of registered participants: 31 in 2017 and 40 in 2018)
+  at POPL<br/>(# of registered participants: 31 in 2017 and 40 in 2018)
 
   <li style="margin-bottom: 1ex;">
   Co-Organizer of <a href="http://www.ccs.neu.edu/home/weiss/esop18/pc.html">
