--- a/service.html
+++ b/service.html
@@ -49,7 +49,7 @@
 
   <li style="margin-bottom: 1ex;">
   Co-Organizer of <a href="http://www.ccs.neu.edu/home/weiss/esop18/pc.html">
-                           ESOP Program Committee Workshop</a> at Inria Paris
+                           ESOP Program Committee Workshop</a> at Inria Paris<br/>
   (December 2017, approx 40 participants)
   <li>
 
