--- a/service.html
+++ b/service.html
@@ -81,7 +81,20 @@
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><a href="http://www.etaps.org/index.php/2018">26th European Symposium on Programming (ESOP 2018)<a href="http://www.etaps.org/index.php/2018"></a></li>
+  <li style="margin-bottom: 1ex;">
+  <a href="https://www.sigsac.org/ccs.html">
+    25th ACM Conference on Computer and Communications Security (CCS 2018)</a>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+  <a href="https://www.ieee-security.org/TC/EuroSP2018/">
+    3rd IEEE European Symposium on Security and Privacy (EuroS\&P 2018)</a>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+  <a href="https://www.etaps.org/index.php/2018/esop">
+    26th European Symposium on Programming (ESOP 2018)</a>
+  </li>
 
   <li style="margin-bottom: 1ex;">
   <a href="http://conf.researchr.org/home/POPL-2017">
