--- a/service.html
+++ b/service.html
@@ -88,7 +88,7 @@
 
   <li style="margin-bottom: 1ex;">
   <a href="https://www.ieee-security.org/TC/EuroSP2018/">
-    3rd IEEE European Symposium on Security and Privacy (EuroS\&P 2018)</a>
+    3rd IEEE European Symposium on Security and Privacy (EuroS&amp;P 2018)</a>
   </li>
 
   <li style="margin-bottom: 1ex;">
