--- a/service.html
+++ b/service.html
@@ -122,17 +122,23 @@
   4th ACM-SIGPLAN Conference on Certified Programs and Proofs (CPP 2016)</a>
   </li>
 
-  <li style="margin-bottom: 1ex;">
-  <a href="http://acns2014.epfl.ch/">
-  12th International Conference on Applied Cryptography and
-   Network Security (ACNS 2014)</a>
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"> -->
+  <!-- <a href="http://acns2014.epfl.ch/"> -->
+  <!-- 12th International Conference on Applied Cryptography and -->
+  <!--  Network Security (ACNS 2014)</a> -->
+  <!-- </li> -->
 
 </ul>
 
 <h3>PC member for workshops</h3>
 
 <ul style="width:42em; text-align: left">
+
+  <li style="margin-bottom: 1ex;">
+  <b>Program Chair</b> for
+  <a href="http://popl18.sigplan.org/track/prisc-2018">
+  2nd Workshop on Principles of Secure Compilation (PriSC 2018)</a>
+  </li>
 
   <li style="margin-bottom: 1ex;">
   <a href="http://conf.researchr.org/track/icfp-2016/tyde-2016-papers">
