--- a/service.html
+++ b/service.html
@@ -174,24 +174,24 @@
 
 <h3>External reviewer for conferences</h3>
 
-<ul style="width:42em; text-align: left">
+<!-- <ul style="width:42em; text-align: left"> -->
 
-    <a href="http://www.ieee-security.org/TC/SP2016/">Oakland S&amp;P 2016</a> (x1),
-    <a href="http://researcher.ibm.com/researcher/view\_project.php?id=5237">PLAS 2014</a> (x1),
-    <a href="http://www.etaps.org/index.php/2014/post">POST 2014</a> (x1),
-    <a href="http://popl.mpi-sws.org/2014/">POPL 2014</a> (x2),
-    <a href="http://cpp2013.forge.nicta.com.au/">CPP 2013</a> (x1),
-    <a href="http://csf2013.seas.harvard.edu/">CSF 2013</a> (x1),
-    <a href="http://popl.mpi-sws.org/2013/">POPL 2013</a> (x2),
-    <a href="http://csf2012.seas.harvard.edu/">CSF 2012</a> (x1),
-    <a href="http://web.cs.wpi.edu/~guttman/post12/">POST 2012</a> (x1),
-    <a href="http://www.icfpconference.org/icfp2011/">ICFP 2011</a> (x1),
-    <a href="http://www.informatik.uni-trier.de/~ley/db/conf/csfw/csf2009.html">CSF 2009</a> (x4),
-    <a href="http://isc08.twisc.org/">ISC 2008</a> (x1),
-    <a href="http://petsymposium.org/2008/">PETS 2008</a> (x2),
-    <a href="http://www.ru.is/kennarar/luca/ICALP08/icalp08/icalp08/">ICALP 2008</a> (x1)
+<!--     <a href="http://www.ieee-security.org/TC/SP2016/">Oakland S&amp;P 2016</a> (x1), -->
+<!--     <a href="http://researcher.ibm.com/researcher/view\_project.php?id=5237">PLAS 2014</a> (x1), -->
+<!--     <a href="http://www.etaps.org/index.php/2014/post">POST 2014</a> (x1), -->
+<!--     <a href="http://popl.mpi-sws.org/2014/">POPL 2014</a> (x2), -->
+<!--     <a href="http://cpp2013.forge.nicta.com.au/">CPP 2013</a> (x1), -->
+<!--     <a href="http://csf2013.seas.harvard.edu/">CSF 2013</a> (x1), -->
+<!--     <a href="http://popl.mpi-sws.org/2013/">POPL 2013</a> (x2), -->
+<!--     <a href="http://csf2012.seas.harvard.edu/">CSF 2012</a> (x1), -->
+<!--     <a href="http://web.cs.wpi.edu/~guttman/post12/">POST 2012</a> (x1), -->
+<!--     <a href="http://www.icfpconference.org/icfp2011/">ICFP 2011</a> (x1), -->
+<!--     <a href="http://www.informatik.uni-trier.de/~ley/db/conf/csfw/csf2009.html">CSF 2009</a> (x4), -->
+<!--     <a href="http://isc08.twisc.org/">ISC 2008</a> (x1), -->
+<!--     <a href="http://petsymposium.org/2008/">PETS 2008</a> (x2), -->
+<!--     <a href="http://www.ru.is/kennarar/luca/ICALP08/icalp08/icalp08/">ICALP 2008</a> (x1) -->
 
-</ul>
+<!-- </ul> -->
 
 <!-- Google analytics code -->
 <script type="text/javascript">
