--- a/service.html
+++ b/service.html
@@ -172,7 +172,7 @@
       <a href="http://www.springer.com/computer/theoretical+computer+science/journal/10990">HOSC</a> (x1),
       <a href="http://ees.elsevier.com/jlamp/">JLAMP</a> (x1)
 
-<h3>External reviewer for conferences</h3>
+<!-- <h3>External reviewer for conferences</h3> -->
 
 <!-- <ul style="width:42em; text-align: left"> -->
 
