--- a/index.html
+++ b/index.html
@@ -469,7 +469,8 @@ MPRI website</a>.</p>
             Aseem Rastogi, and
             Nikhil Swamy.
     <b><a href="http://arxiv.org/abs/1707.02466">Recalling a Witness: Foundations and Applications of Monotonic State</a></b>.
-            To appear at the <a href="https://popl18.sigplan.org">45th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>, January 2018.
+            In <a href="https://popl18.sigplan.org">45th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>,
+            PACMPL, 2(POPL):65:1-65:30, January 2018.
   </li>
 
   <li style="margin-bottom: 1ex;">
