--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;">
             Arthur Azevedo de Amorim,
             C&#259;t&#259;lin Hri&#355;cu, and
-            Benjamin C. Pierce.<br/>
+            Benjamin C. Pierce.
     <b><a href="http://arxiv.org/abs/1705.07354">The Meaning of Memory Safety</a></b>.
             Accepted at <a href="https://www.etaps.org/index.php/2018/post">7th International Conference on Principles of Security and Trust (POST)</a>, April 2018.
   <ul style="font-size: small">
