--- a/publications.html
+++ b/publications.html
@@ -26,6 +26,18 @@
 <ol start="1" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+            Arthur Azevedo de Amorim,
+            C&#259;t&#259;lin Hri&#355;cu, and
+            Benjamin C. Pierce.<br/>
+    <b><a href="http://arxiv.org/abs/1705.07354">The Meaning of Memory Safety</a></b>.
+            Accepted at <a href="https://www.etaps.org/index.php/2018/post">7th International Conference on Principles of Security and Trust (POST)</a>, April 2018.
+  <ul style="font-size: small">
+    <li>A previous draft was entitled
+        Alpha is for Address! The Essence of Memory Safety</li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
             Danel Ahman,
             Cédric Fournet,
             C&#259;t&#259;lin Hri&#355;cu,
