--- a/index.html
+++ b/index.html
@@ -458,6 +458,7 @@ MPRI website</a>.</p>
   <ul style="font-size: small">
     <li>A previous draft was entitled
         Alpha is for Address! The Essence of Memory Safety</li>
+    <li>Coq proofs available <a href="https://github.com/arthuraa/memory-safe-language">here</a> and <a href="https://github.com/micro-policies/micro-policies-coq/tree/master/memory_safety">here</a></li>
   </ul>
   </li>
 
