--- a/index.html
+++ b/index.html
@@ -507,8 +507,8 @@ MPRI website</a>.</p>
     Cédric Fournet,
     Nikhil Swamy,
     <b><a href="http://arxiv.org/abs/1703.00053">Verified Low-Level Programming Embedded in F*</a></b>.
-    In 22nd ACM SIGPLAN International Conference on
-    Functional Programming (ICFP), September 2017. To appear.
+    In <a href="https://conf.researchr.org/home/icfp-2017">22nd ACM SIGPLAN International Conference on
+    Functional Programming (ICFP)</a>, PACMPL, 1(ICFP):17:1–17:29, September 2017.
   </li>
 
   <li style="margin-bottom: 1ex;">
