--- a/publications.html
+++ b/publications.html
@@ -54,6 +54,23 @@
   </li>
 
   <li style="margin-bottom: 1ex;">
+    Niklas Grimm,
+    Kenji Maillard,
+    Cédric Fournet,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Matteo Maffei,
+    Jonathan Protzenko,
+    Tahina Ramananandro,
+    Aseem Rastogi,
+    Nikhil Swamy, and
+    Santiago Zanella-Béguelin.
+    <b><a href="https://arxiv.org/abs/1703.00055">A Monadic Framework for Relational Verification: Applied to Information Security, Program Equivalence, and Optimizations</a></b>.
+    In <a href="https://popl18.sigplan.org/track/CPP-2018">7th ACM SIGPLAN International Conference on Certified Programs and Proofs (CPP)</a>, International Conference on Certified Programs and Proofs (CPP), pages 130--145, January 2018  <ul style="font-size: small">
+    <li><a href="https://github.com/FStarLang/FStar/tree/master/examples/rel">Code for the examples</a></li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Jonathan Protzenko,
     Jean-Karim Zinzindohoué,
     Aseem Rastogi,
@@ -417,21 +434,6 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
     <li>A previous draft was entitled
         Alpha is for Address! The Essence of Memory Safety</li>
   </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;">
-    Niklas Grimm,
-    Kenji Maillard,
-    Cédric Fournet,
-    C&#259;t&#259;lin Hri&#355;cu,
-    Matteo Maffei,
-    Jonathan Protzenko,
-    Tahina Ramananandro,
-    Aseem Rastogi,
-    Nikhil Swamy, and
-    Santiago Zanella-Béguelin.
-    <b><a href="https://arxiv.org/abs/1703.00055">A Monadic Framework for Relational Verification: Applied to Information Security, Program Equivalence, and Optimizations</a></b>.
-    arXiv:1703.00055, July 2017.
   </li>
 
   <li style="margin-bottom: 1ex;">
