--- a/index.html
+++ b/index.html
@@ -434,6 +434,7 @@ MPRI website</a>.</p>
            Formally Secure Compilation Despite Dynamic Compromise</a></b>.
            February 2018.
     <ul style="font-size: small">
+      <li><a href="https://github.com/secure-compilation/when-good-components-go-bad">Coq development</a>
       <li>A previous extended abstract was called
           <a href="https://arxiv.org/abs/1710.07308">Formally secure compilation of unsafe low-level components</a></li>
     </ul>
