--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@ MPRI website</a>.</p>
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/when-good-components-go-bad">Coq development</a>
       <li>A previous extended abstract was called
-          <a href="https://arxiv.org/abs/1710.07308">Formally secure compilation of unsafe low-level components</a></li>
+          <a href="https://arxiv.org/abs/1710.07308">Formally Secure Compilation of Unsafe Low-Level Components</a></li>
     </ul>
   </li>
 
