--- a/publications.html
+++ b/publications.html
@@ -425,6 +425,27 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <ol start="30" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+            Guglielmo Fachini,
+            C&#259;t&#259;lin Hri&#355;cu,
+            Marco Stronati,
+            Arthur Azevedo de Amorim,
+            Ana Nora Evans,
+            Carmine Abate,
+            Roberto Blanco,
+            Théo Laurent,
+            Benjamin C. Pierce, and
+            Andrew Tolmach.
+    <b><a href="https://arxiv.org/abs/1802.00588">When Good Components Go Bad:
+           Formally Secure Compilation Despite Dynamic Compromise</a></b>.
+           February 2018.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/secure-compilation/when-good-components-go-bad">Coq development</a>
+      <li>A previous extended abstract was called
+          <a href="https://arxiv.org/abs/1710.07308">Formally Secure Compilation of Unsafe Low-Level Components</a></li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
             Yannis Juglaret,
             C&#259;t&#259;lin Hri&#355;cu,
             Arthur Azevedo de Amorim,
