--- a/publications.html
+++ b/publications.html
@@ -446,6 +446,16 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
   </li>
 
   <li style="margin-bottom: 1ex;">
+            Deepak Garg,
+            C&#259;t&#259;lin Hri&#355;cu,
+            Marco Patrignani,
+            Marco Stronati, and
+            David Swasey.
+    <b><a href="https://arxiv.org/abs/1710.07309">Robust hyperproperty preservation for secure compilation (extended abstract)</a></b>.
+            Presented at the <a href="https://popl18.sigplan.org/track/prisc-2018">2nd Workshop on Principles of Secure Compilation (PriSC)</a>, January 2018.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
      Alejandro Aguirre,
      C&#259;t&#259;lin Hri&#355;cu,
      Chantal Keller,
