--- a/publications.html
+++ b/publications.html
@@ -421,7 +421,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 
 <!--
 -->
-<h3>Informal</h3>
+<h3>Informal Publications and Drafts</h3>
 <ol start="30" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
