--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
   <li style="margin-bottom: 1ex;"><b>Upcoming: Formally Secure Compilation course at <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD)</a></b>, 27 August - 1 September, 2018, <a href="https://en.wikipedia.org/wiki/Bertinoro">Bertinoro, Italy</a>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="http://projects.lsv.fr/epit18/?page_id=49">Program Verification with F*</a></b> course at <a href="http://projects.lsv.fr/epit18/">EPIT 2018 Software Verification Spring School</a>,<br/> 7-11 May, 2018, <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a></li>
+  <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="http://projects.lsv.fr/epit18/?page_id=49">Program Verification with F*</a></b> course at <a href="http://projects.lsv.fr/epit18/">EPIT 2018 Software Verification Spring School</a>, 7-11 May, 2018, <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">Verifying Cryptographic Implementations with F*</a></b> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school. Aarhus, Denmark, October<!-- 2-4 -->, 2017
   </li>
