--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b>Upcoming: Formally Secure Compilation course at <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD)</a></b>, 27 August - 1 September, 2018, <a href="https://en.wikipedia.org/wiki/Bertinoro">Bertinoro, Italy</a>
+  <li style="margin-bottom: 1ex;"><b>Upcoming: Formally Secure Compilation course at<br/> <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD)</a></b>, 27 August - 1 September, 2018, <a href="https://en.wikipedia.org/wiki/Bertinoro">Bertinoro, Italy</a>
   </li>
 
   <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="http://projects.lsv.fr/epit18/?page_id=49">Program Verification with F*</a></b> course at <a href="http://projects.lsv.fr/epit18/">EPIT 2018 Software Verification Spring School</a>, 7-11 May, 2018, <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a></li>
