--- a/teaching.html
+++ b/teaching.html
@@ -27,7 +27,7 @@
 
   <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="http://projects.lsv.fr/epit18/?page_id=49">Program Verification with F*</a></b> course at<br/> <a href="http://projects.lsv.fr/epit18/">EPIT 2018 Software Verification Spring School</a>, 7-11 May, 2018, <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a></li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">Verifying Cryptographic Implementations with F*</a></b> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school. Aarhus, Denmark, October<!-- 2-4 -->, 2017
+  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">Verifying Cryptographic Implementations with F*</a></b> at<br/> <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school. Aarhus, Denmark, October<!-- 2-4 -->, 2017
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/nancy2017/">Verifying Cryptographic Implementations with F*</a></b> course at <a href="http://www.cs.bris.ac.uk/proofschool/">Models and Tools for Cryptographic Proofs</a> summer school, Nancy, France, <!-- 10-13 --> July 2017
