--- a/talks.html
+++ b/talks.html
@@ -107,7 +107,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
           <a href="talks/fstar-dagstuhl.html?transition=none&history=1">slides</a> (2016-03-30)
       </li>
 
-      <li><a href="http://www.mlworkshop.org/ml2015">ML Workshop 2015</a>: <a href="http://www.mlworkshop.org/slides-swamy.html">slides</a>, <a href="https://www.youtube.com/watch?v=bEJKKquyngk">video</a> (2015-09-03)
+      <li><a href="http://www.mlworkshop.org/slides-swamy.html">ML Workshop 2015</a>: <a href="http://www.mlworkshop.org/slides-swamy.html">slides</a>, <a href="https://www.youtube.com/watch?v=bEJKKquyngk">video</a> (2015-09-03)
       </li>
     </ul>
   </li>
