--- a/publications.html
+++ b/publications.html
@@ -425,6 +425,26 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <ol start="30" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Guido Martínez,
+    Danel Ahman,
+    Victor Dumitrescu,
+    Nick Giannarakis,
+    Chris Hawblitzel,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Monal Narasimhamurthy,
+    Zoe Paraskevopoulou,
+    Clément Pit-Claudel,
+    Jonathan Protzenko,
+    Tahina Ramananandro,
+    Aseem Rastogi,
+    Nikhil Swamy,
+    <b><!--a href="http://arxiv.org/abs/"-->Meta-F*: Metaprogramming and Tactics in an Effectful Program Verifier</a></b>.
+    Submitted to arXiv. March, 2018.
+    <!-- In <a href="https://conf.researchr.org/home/icfp-2017">22nd ACM SIGPLAN International Conference on -->
+    <!-- Functional Programming (ICFP)</a>, PACMPL, 1(ICFP):17:1–17:29, September 2017. -->
+  </li>
+
+  <li style="margin-bottom: 1ex;">
             Guglielmo Fachini,
             C&#259;t&#259;lin Hri&#355;cu,
             Marco Stronati,
