--- a/publications.html
+++ b/publications.html
@@ -438,7 +438,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
     Tahina Ramananandro,
     Aseem Rastogi,
     Nikhil Swamy,
-    <b><!--a href="http://arxiv.org/abs/"-->Meta-F*: Metaprogramming and Tactics in an Effectful Program Verifier</a></b>.
+    <b><a href="https://arxiv.org/abs/1803.06547">Meta-F*: Metaprogramming and Tactics in an Effectful Program Verifier</a></b>.
     arXiv. March, 2018.
     <!-- In <a href="https://conf.researchr.org/home/icfp-2017">22nd ACM SIGPLAN International Conference on -->
     <!-- Functional Programming (ICFP)</a>, PACMPL, 1(ICFP):17:1–17:29, September 2017. -->
