--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ MPRI website</a>.</p>
     Aseem Rastogi,
     Nikhil Swamy,
     <b><a href="https://arxiv.org/abs/1803.06547">Meta-F*: Metaprogramming and Tactics in an Effectful Program Verifier</a></b>.
-    arXiv. March, 2018.
+    arXiv:1803.06547. March, 2018.
     <!-- In <a href="https://conf.researchr.org/home/icfp-2017">22nd ACM SIGPLAN International Conference on -->
     <!-- Functional Programming (ICFP)</a>, PACMPL, 1(ICFP):17:1–17:29, September 2017. -->
   </li>
