--- a/index.html
+++ b/index.html
@@ -110,7 +110,13 @@ Research Cambridge</a>.</p>
   <li style="margin-bottom: 1ex;"><b><a href="https://www.sigsac.org/ccs/CCS2018/">ACM Conference on Computer and Communications Security (CCS 2018)</b></a> (PC member)
   <ul>
   <li>Submission deadline: May 8, 2018</li>
-  <!-- <li>Conference: 24-26 April, 2018, London, United Kingdom</li> -->
+  <li>Conference: 15-19 October 2018, Toronto, Canada</li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://fmse.info.uaic.ro/event/from-2018/">Working Formal Methods Symposium</a> (Invited Speaker<!-- , <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> -->)
+  <ul>
+  <li>Conference: June 18-20, 2018. Iasi, Romania</li>
   </ul>
   </li>
 
