--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://fmse.info.uaic.ro/event/from-2018/">Working Formal Methods Symposium</a> (Invited Speaker<!-- , <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> -->)
+  <li style="margin-bottom: 1ex;"><b><a href="https://fmse.info.uaic.ro/event/from-2018/">Working Formal Methods Symposium</a></b> (Invited Speaker<!-- , <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> -->)
   <ul>
   <li>Conference: June 18-20, 2018. Iasi, Romania</li>
   </ul>
