--- a/index.html
+++ b/index.html
@@ -406,6 +406,8 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/kyoDralliam">Kenji Maillard</a> (PhD Student, ENS Paris)</li>
 
+  <li style="margin-bottom: 1ex;"><a href="https://www.researchgate.net/profile/Carmine_Abate">Carmine Abate</a> (PhD Student, Inria Paris)</li>
+
   <li style="margin-bottom: 1ex;"><a href="https://github.com/mtzguido">Guido Martínez</a> (Co-Supervised PhD Student, CIFASIS-CONICET Rosario)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://danelahman.github.io/">Danel Ahman</a> (Postdoctoral Researcher)</li>
@@ -414,9 +416,9 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a> (Research Engineer)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.researchgate.net/profile/Carmine_Abate">Carmine Abate</a> (Research Intern, University of Trento)</li>
-
   <li style="margin-bottom: 1ex;"><a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a> (Research Intern, ENS Rennes)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/floriangru">Florian Groult</a> (Research Intern, Orléans University)</li>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.ccs.neu.edu/home/amal/">Amal Ahmed</a> (Visiting Professor, Northeastern University)</li>
 
