--- a/students.html
+++ b/students.html
@@ -67,15 +67,15 @@
 
   <li style="margin-bottom: 1ex;"><a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a></li>
   <ul>
-    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-02:<br/>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-02:
     Formally secure compilation</li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.ens-rennes.fr/">ENS Rennes</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/floriangru">Florian Groult</a></li>
   <ul>
-    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-04:<br/>
-    Formally secure compilation</li>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-04:
+    Secure compilation</li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="">Orléans University</a>]</div></li>
 
