--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ In the fall of 2016 I held a Visiting Researcher position at
 <p style="width:42em; text-align: left"> I received my PhD
 <!--(summa cum laude)-->
 from <a href="https://saarland-informatics-campus.de/en/">Saarland
-University</a> in Saarbrücken, Germany, where I 
+University</a> in Saarbrücken, Germany, where I
 <!-- was a member of
 the <a href="http://www.infsec.cs.uni-saarland.de/">Information
 Security and Cryptography Group</a> and
@@ -256,7 +256,7 @@ Research Cambridge</a>.</p>
 <!--
   <li style="margin-bottom: 1ex;">
   <a href="https://www.fstar-lang.org/tutorial/">F* tutorial at POPL 2015</a>,
-  January 2015 
+  January 2015
   </li>
   <li style="margin-bottom: 1ex;">
    <a href="https://wiki.inria.fr/prosecco/The_Joint_EasyCrypt-F*-CryptoVerif_School_2014">The Joint EasyCrypt-F*-CryptoVerif School 2014</a>, November 2014 (main organizer)
@@ -430,7 +430,7 @@ MPRI website</a>.</p>
 
 <h2 id="publications">Recent Publications and Drafts</h2>
 <!-- TODO: Use bibtex2html for this! -->
-<p>For a complete list of my publications please look <a href="publications.html">here</a><!--<br/>-->
+<p>For a complete list of my papers please look <a href="publications.html">here</a><!--<br/>-->
 (also on <a href="http://www.informatik.uni-trier.de/~ley/pers/hy/h/Hritcu:Catalin.html">DBLP</a> and <a href="http://scholar.google.com/citations?user=d-3XtW8AAAAJ">Google Scholar</a><!--, <a href="http://academic.research.microsoft.com/Author/3586469">MS Academic Search</a>, and <a href="http://www.ad-astra.ro/whoswho/view_profile.php?user_id=1843&lang=en">AdAstra.ro</a>-->).</p>
 <ul style="width:42em; text-align: left">
 
@@ -597,7 +597,7 @@ MPRI website</a>.</p>
     Li-yao Xia.
     <b><a href="https://arxiv.org/abs/1607.05443">Beginner's Luck: A Language for Random Generators.</a></b>
     In <a href="http://conf.researchr.org/home/POPL-2017">44th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>,
-    pages 114--129. ACM, January 2017. 
+    pages 114--129. ACM, January 2017.
   </li>
 
   <!-- <li style="margin-bottom: 1ex;"> -->
@@ -645,7 +645,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><em><a href="https://popl18.sigplan.org/track/prisc-2018">Principles of Secure Compilation, PriSC'18</a></em></a> 
+  <li style="margin-bottom: 1ex;"><em><a href="https://popl18.sigplan.org/track/prisc-2018">Principles of Secure Compilation, PriSC'18</a></em></a>
 
     <ul style="font-size: small">
       <li>Program Chair's Welcome Message: <a href="https://popl18.sigplan.org/event/prisc-2018-prisc-welcome">slides</a> (2018-01-13)</li>
@@ -653,7 +653,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
   </li>
 
-  <li style="margin-bottom: 1ex;"><em>What's new in F*?</em></a> 
+  <li style="margin-bottom: 1ex;"><em>What's new in F*?</em></a>
 
     <ul style="font-size: small">
       <li><b>Recent</b>: Talk at <a href="">Everest Workshop</a>: <a href="talks/fstar_all_hands_sept_2017/out/fstar-all-hands.html">slides</a> (2017-10-02)</li>
@@ -661,7 +661,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
   </li>
 
-  <li style="margin-bottom: 1ex;"><em>Verified Effectful Programming in F*</em></a> 
+  <li style="margin-bottom: 1ex;"><em>Verified Effectful Programming in F*</em></a>
 
     <ul style="font-size: small">
       <li><b>Recent</b>: Invited Keynote Talk at <a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming (TFP)</a>: <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> (2017-06-21)</li>
@@ -670,7 +670,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
   </li>
 
-  <li style="margin-bottom: 1ex;"><em>Presentation of Inria Prosecco team</em></a> 
+  <li style="margin-bottom: 1ex;"><em>Presentation of Inria Prosecco team</em></a>
 
     <ul style="font-size: small">
       <li><a href="https://www.france-science.org/FADEx-2017-Cybersecurity-EN.html">French-American Doctoral Exchange Program (FADEx) 2017: Cybersecurity</a>: <a href="talks/2017-06-16-INRIA-Prosecco-FADEx.pdf">slides</a> (2017-06-16)</li>
@@ -678,7 +678,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
   </li>
 
-  <li style="margin-bottom: 1ex;"><em><a href="http://www.ieee-security.org/TC/EuroSP2017/">European Symposium on Security and Privacy, EuroS&amp;P 2017</a></em></a> 
+  <li style="margin-bottom: 1ex;"><em><a href="http://www.ieee-security.org/TC/EuroSP2017/">European Symposium on Security and Privacy, EuroS&amp;P 2017</a></em></a>
 
     <ul style="font-size: small">
       <li>General Chair's Welcome Message: <a href="talks/2017-04-26-EuroSP-Welcome.pdf">slides</a> (2017-04-26)</li>
@@ -686,7 +686,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
   </li>
 
-  <li style="margin-bottom: 1ex;"><em>Efficient Formally Secure Compilers to a Tagged Architecture</em></a> 
+  <li style="margin-bottom: 1ex;"><em>Efficient Formally Secure Compilers to a Tagged Architecture</em></a>
 
     <ul style="font-size: small">
       <li><a href="http://confiance-numerique.clermont-universite.fr/index-en.html">Université Clermont Auvergne</a>: <a href="talks/2017-04-06-Secure-Compilation-Clermont-Ferrand.pdf">slides</a>, <b><a href="http://webtv.u-clermont1.fr/media-MEDIA170410150815297">video</a></b> (2017-04-06)</li>
@@ -788,12 +788,12 @@ Jean-Karim Zinzindohoue)</li>
 
   <li style="margin-bottom: 1ex;">
     <a href="https://arxiv.org/abs/1607.05443">Luck: A Domain Specific Language For Property-Based Generators</a>
-    (with Leonidas Lampropoulos, Diane Gallois-Wong, 
+    (with Leonidas Lampropoulos, Diane Gallois-Wong,
      John Hughes, Benjamin C. Pierce, and Li-yao Xia)</li>
 
   <li style="margin-bottom: 1ex;">
     <a href="https://github.com/QuickChick">QuickChick:
-      Property-based testing plugin for Coq, including 
+      Property-based testing plugin for Coq, including
       a foundational verification framework for testing code</a>
       (with Maxime Dénès, Leonidas Lampropoulos, Zoe Paraskevopoulou,
        and Benjamin C. Pierce)</li>
@@ -803,7 +803,7 @@ Jean-Karim Zinzindohoue)</li>
 <h2 id="misc">Misc</h2>
 <ul>
   <li><a href="CatalinHritcuCV.pdf">Curriculum vitae</a>
-<!--, 
+<!--,
       <a href="CatalinHritcuResearch.pdf">research statement</a>, and
       <a href="CatalinHritcuTeaching.pdf">teaching statement</a>
       (January 2013)
