--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
           Symposium on Principles of Programming Languages (POPL)</a> (2015-01-13)
       </li>
 
-      <li><a href="https://wiki.inria.fr/prosecco/The_Joint_EasyCrypt-F*-CryptoVerif_School_2014">The Joint EasyCrypt-F*-CryptoVerif School 2014</a> (2014-11-26 and 27)
+      <li><a href="teaching/paris-school2014.html">The Joint EasyCrypt-F*-CryptoVerif School 2014</a> (2014-11-26 and 27)
       </li>
 
     </ul>
