--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@ Research Cambridge</a>.</p>
 
   <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://www.etaps.org/index.php/2018/esop">European Symposium on Programming, ESOP 2018</a></b> (PC member)
-  <ul>
-  <!-- <li>Abstract deadline: 13 October 2017</li> -->
-  <!-- <li>Submission deadline: 20 October 2017</li> -->
-  <li>Conference: 14-21 April 2018, Thessaloniki, Greece</li>
-  </ul>
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><b><a href="http://www.etaps.org/index.php/2018/esop">European Symposium on Programming, ESOP 2018</a></b> (PC member) -->
+  <!-- <ul> -->
+  <!-- <\!-- <li>Abstract deadline: 13 October 2017</li> -\-> -->
+  <!-- <\!-- <li>Submission deadline: 20 October 2017</li> -\-> -->
+  <!-- <li>Conference: 14-21 April 2018, Thessaloniki, Greece</li> -->
+  <!-- </ul> -->
+  <!-- </li> -->
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/TC/EuroSP2018/">IEEE European Symposium on Security and Privacy, EuroS&amp;P 2018</b></a> (PC member)
   <ul>
