--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Research Cambridge</a>.</p>
 
   <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
 
-  <!-- <li style="margin-bottom: 1ex;"><b><a href="http://www.etaps.org/index.php/2018/esop">European Symposium on Programming, ESOP 2018</a></b> (PC member) -->
+  <li style="margin-bottom: 1ex;"><b><a href="http://www.etaps.org/index.php/2018/esop">European Symposium on Programming, ESOP 2018</a></b> (PC member)
   <!-- <ul> -->
   <!-- <\!-- <li>Abstract deadline: 13 October 2017</li> -\-> -->
   <!-- <\!-- <li>Submission deadline: 20 October 2017</li> -\-> -->
@@ -89,11 +89,11 @@ Research Cambridge</a>.</p>
   <!-- </li> -->
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/TC/EuroSP2018/">IEEE European Symposium on Security and Privacy, EuroS&amp;P 2018</b></a> (PC member)
-  <ul>
-  <!-- <li>Submission deadline: August 15, 2017</li> -->
-  <li>Conference: 24-26 April, 2018, London, United Kingdom</li>
-  </ul>
-  </li>
+  <!-- <ul> -->
+  <!-- <\!-- <li>Submission deadline: August 15, 2017</li> -\-> -->
+  <!-- <li>Conference: 24-26 April, 2018, London, United Kingdom</li> -->
+  <!-- </ul> -->
+  <!-- </li> -->
 
   <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/18201">Dagstuhl Seminar 18201 on Secure Compilation</b></a> (Co-Organizer)
   <ul>
