--- a/index.html
+++ b/index.html
@@ -74,27 +74,6 @@ Research Cambridge</a>.</p>
     </ul>
   </li>
 
-  <!-- <li style="margin-bottom: 1ex;">Awarded <a href="http://www.agence-nationale-recherche.fr/informations/actualites/detail/appel-a-projets-generique-2016-publication-des-premiers-resultats/">Young Researcher grant (JCJC) from the French National Research<br/> Agency (ANR)</a> on <i>QuickChick: Property-based Testing for Coq</i>, July 2016</li> -->
-
-  <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/">Inria Prosecco is looking for PostDocs and young researchers</a></li> -->
-
-  <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
-
-  <li style="margin-bottom: 1ex;"><b><a href="http://www.etaps.org/index.php/2018/esop">European Symposium on Programming, ESOP 2018</a></b> (PC member)
-  <!-- <ul> -->
-  <!-- <\!-- <li>Abstract deadline: 13 October 2017</li> -\-> -->
-  <!-- <\!-- <li>Submission deadline: 20 October 2017</li> -\-> -->
-  <!-- <li>Conference: 14-21 April 2018, Thessaloniki, Greece</li> -->
-  <!-- </ul> -->
-  <!-- </li> -->
-
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/TC/EuroSP2018/">IEEE European Symposium on Security and Privacy, EuroS&amp;P 2018</b></a> (PC member)
-  <!-- <ul> -->
-  <!-- <\!-- <li>Submission deadline: August 15, 2017</li> -\-> -->
-  <!-- <li>Conference: 24-26 April, 2018, London, United Kingdom</li> -->
-  <!-- </ul> -->
-  <!-- </li> -->
-
   <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/18201">Dagstuhl Seminar 18201 on Secure Compilation</b></a> (Co-Organizer)
   <ul>
   <li>Seminar: 13-18 May, 2018, Schloss Dagstuhl, Germany</li>
@@ -139,6 +118,27 @@ Research Cambridge</a>.</p>
   <li>Conference: 6-12 January 2019, Lisbon, Portugal</li>
   </ul>
   </li>
+
+  <!-- <li style="margin-bottom: 1ex;">Awarded <a href="http://www.agence-nationale-recherche.fr/informations/actualites/detail/appel-a-projets-generique-2016-publication-des-premiers-resultats/">Young Researcher grant (JCJC) from the French National Research<br/> Agency (ANR)</a> on <i>QuickChick: Property-based Testing for Coq</i>, July 2016</li> -->
+
+  <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/">Inria Prosecco is looking for PostDocs and young researchers</a></li> -->
+
+  <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
+
+  <li style="margin-bottom: 1ex;"><a href="http://www.etaps.org/index.php/2018/esop">European Symposium on Programming, ESOP 2018</a> (PC member)
+  <!-- <ul> -->
+  <!-- <\!-- <li>Abstract deadline: 13 October 2017</li> -\-> -->
+  <!-- <\!-- <li>Submission deadline: 20 October 2017</li> -\-> -->
+  <!-- <li>Conference: 14-21 April 2018, Thessaloniki, Greece</li> -->
+  <!-- </ul> -->
+  <!-- </li> -->
+
+  <li style="margin-bottom: 1ex;"><a href="https://www.ieee-security.org/TC/EuroSP2018/">IEEE European Symposium on Security and Privacy, EuroS&amp;P 2018</a> (PC member)
+  <!-- <ul> -->
+  <!-- <\!-- <li>Submission deadline: August 15, 2017</li> -\-> -->
+  <!-- <li>Conference: 24-26 April, 2018, London, United Kingdom</li> -->
+  <!-- </ul> -->
+  <!-- </li> -->
 
   <li style="margin-bottom: 1ex;"><a href="http://popl18.sigplan.org/track/prisc-2018">Principles of Secure Compilation, PriSC 2018</a> (PC Chair, Co-organizer)
   <ul>
