--- a/index.html
+++ b/index.html
@@ -33,21 +33,22 @@ project</a>--> under the supervision
 of <a href="http://www.cis.upenn.edu/~bcpierce/"><!--Prof. -->Benjamin
 C. Pierce</a>.
 In the fall of 2016 I held a Visiting Researcher position at
-<a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-redmond/">Microsoft Research Redmond</a>.</p>
-
-<p style="width:42em; text-align: left"> I received my PhD
+<a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-redmond/">Microsoft Research Redmond</a>.
+I received my PhD
 <!--(summa cum laude)-->
 from <a href="https://saarland-informatics-campus.de/en/">Saarland
-University</a> in Saarbrücken, Germany, where I
-<!-- was a member of
-the <a href="http://www.infsec.cs.uni-saarland.de/">Information
-Security and Cryptography Group</a> and
--->
-was supported by fellowships
-from the <a href="http://www.imprs-cs.de/">International Max Planck
-Research School for Computer Science (IMPRS-CS)</a>
-and <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-cambridge/">Microsoft
-Research Cambridge</a>.</p>
+University</a> in Saarbrücken, Germany.
+<!--  where I -->
+<!-- <\!-- was a member of -->
+<!-- the <a href="http://www.infsec.cs.uni-saarland.de/">Information -->
+<!-- Security and Cryptography Group</a> and -->
+<!-- -\-> -->
+<!-- was supported by fellowships -->
+<!-- from the <a href="http://www.imprs-cs.de/">International Max Planck -->
+<!-- Research School for Computer Science (IMPRS-CS)</a> -->
+<!-- and <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-cambridge/">Microsoft -->
+<!-- Research Cambridge</a>. -->
+</p>
 
 <p>
 <b>Quick Links:</b>
