--- a/index.html
+++ b/index.html
@@ -456,15 +456,15 @@ MPRI website</a>.</p>
   </li>
 
   <li style="margin-bottom: 1ex;">
+            Carmine Abate,
+            Arthur Azevedo de Amorim,
+            Roberto Blanco,
+            Ana Nora Evans,
             Guglielmo Fachini,
             C&#259;t&#259;lin Hri&#355;cu,
-            Marco Stronati,
-            Arthur Azevedo de Amorim,
-            Ana Nora Evans,
-            Carmine Abate,
-            Roberto Blanco,
             Théo Laurent,
-            Benjamin C. Pierce, and
+            Benjamin C. Pierce,
+            Marco Stronati, and
             Andrew Tolmach.
     <b><a href="https://arxiv.org/abs/1802.00588">When Good Components Go Bad:
            Formally Secure Compilation Despite Dynamic Compromise</a></b>.
