--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ MPRI website</a>.</p>
             Andrew Tolmach.
     <b><a href="https://arxiv.org/abs/1802.00588">When Good Components Go Bad:
            Formally Secure Compilation Despite Dynamic Compromise</a></b>.
-           February 2018.
+           arXiv:1802.00588. February 2018.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/when-good-components-go-bad">Coq development</a>
       <li>A previous extended abstract was called
