--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ University</a> in Saarbrücken, Germany.
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.sigsac.org/ccs/CCS2018/">ACM Conference on Computer and Communications Security (CCS 2018)</b></a> (PC member)
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.sigsac.org/ccs/CCS2018/">ACM Conference on Computer and Communications Security, CCS 2018</b></a> (PC member)
   <ul>
   <li>Submission deadline: May 8, 2018</li>
   <li>Conference: 15-19 October 2018, Toronto, Canada</li>
